[build-system]
requires = ["setuptools>=61.0.0", "wheel", "bumpver"]
build-backend = "setuptools.build_meta"

[project]
name = "psg_reskinner"
description = "Instantaneous theme changing for PySimpleGUI windows."
version = "3.0.2"
readme = "./res/DESCRIPTION.md"
authors = [{ name = "Divine U. Afam-Ifediogor", email = "divineafam@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
keywords = ["PySimpleGUI", "reskin", "realtime", "theme", "color"]
dependencies = [
    "colour>=0.1.5",
    "PySimpleGUI>=4.60.3.96"
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/definite-d/psg_reskinner/"
"Bug Tracker" = "https://github.com/definite-d/psg_reskinner/issues/"

[tool.setuptools]
packages = ["psg_reskinner"]

[tool.bumpver]
current_version = "2.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "New {new_version} update from {old_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"./README.md" = [
    "Version {version}",
]
"./res/README_DRY.md" = [
    "Version {version}",
]
"psg_reskinner/version.py" = [
    '__version__: str = "{version}"'
]


